test/ill_formed/redeclaration.pcl
a = func (): foo {
  print 1;
}

b = func (): foo {
  print 2;
}